<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="api_key">AIzaSyAdO1JWj2VjgaznGIK6d2k2nESE8HfzWeY</string>
    <string name="sharedpreferences_file_key">shared preferences</string>
    <string name="app_name">ShoppingList</string>

    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="remember_me">Remember me</string>
    <string name="go_to_login_screen">Go to login screen</string>
    
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_repeated_password">Enter Repeated Password</string>
    <string name="entered_passwords_do_not_match">Entered passwords do not match</string>
    <string name="isloginrememberable_is_null">isLoginRememberable is null</string>

    <string name="choose_what_you_want_to_do">Choose what you want to do</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Questions-->
    <string name="are_you_sure_question">Are you sure?</string>
    <string name="are_you_sure_you_want_to_log_out_question">Are you sure you want to log out?</string>

    <!--Api errors-->
    <string name="EMAIL_NOT_FOUND" tools:keep="@string/EMAIL_NOT_FOUND">Email not found</string>
    <string name="INVALID_PASSWORD" tools:keep="@string/INVALID_PASSWORD">Invalid Password</string>
    <string name="EMAIL_EXISTS" tools:keep="@string/EMAIL_EXISTS">Email already exists</string>
    <string name="INVALID_EMAIL" tools:keep="@string/INVALID_EMAIL">Email is not valid</string>

</resources>
